--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -34,7 +34,7 @@
     </head>
     <body>
         {% comment %} navbar {% endcomment %}
-        <nav class="navbar navbar-default custom-navbar">
+        <nav class="navbar navbar-default custom-navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
@@ -42,8 +42,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand bigbrand">WordHaven</a>
-                    {% comment %} <a class="navbar-brand bigbrand" href="{% url 'post_list' %}">WordHaven</a> {% endcomment %}
+                    {% comment %} <a class="navbar-brand bigbrand">WordHaven</a> {% endcomment %}
+                    <a class="navbar-brand bigbrand" href="{% url 'index' %}">WordHaven</a>
                 </div>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="nav navbar-nav">
@@ -134,7 +134,7 @@
 
         </div>
 
-        <footer class="text-center" style="background: #333; color: white; padding: 20px 0; margin-top: 50px;">
+        <footer class="text-center" style="background: #333; color: white; padding: 20px 0; margin-top: auto;">
             <p>© 2024 WordHaven | Designed with ❤️ by Priya Sambare</p>
         </footer>
        
